--- a/style.css
+++ b/style.css
@@ -7,12 +7,13 @@ h1{
     font-size: 38px;
 }
 h2{
-    font-size: 30px;
+    font-size: 20px;
 }
 h3{
-    font-size: 18px;
-    color: black;
-    font-weight: bolder;
+    font-size: 30px;
+}
+h4{
+    font-size: 22px;
 }
 .blue{
     color: blue;
@@ -26,10 +27,13 @@ h3{
     width: 150px;
     height: 70px;
 }
+header{
+    display: flex;
+    justify-content: space-between;
+}
 header nav{
     display:flex;
-    justify-content: space-between;
-    align-items: center;
+    align-items: flex-end;
     height: 100px;
 }
 header nav .liens{
@@ -69,12 +73,13 @@ header nav .liens{
     border-radius: 15px;
     width: 30%;
     height: 50px;
+    margin-top: 30px;
 }
 .localisation input{
     width: 50%;
     border: none;
-    border-top: solid 2px rgb(216, 216, 216);
-    border-bottom: solid 2px rgb(216, 216, 216);
+    border-top: solid 2px #F2F2F2;
+    border-bottom: solid 2px #F2F2F2;
     padding-left: 20px;
     outline: none;
     font-weight: bold;
@@ -99,7 +104,7 @@ header nav .liens{
     transition: 0.2s;
 }
 #iconeloc{
-    background-color: rgb(216, 216, 216);
+    background-color: #F2F2F2;
     border-top-left-radius: 12px;
     border-bottom-left-radius: 12px;
     font-size: 20px;
@@ -132,7 +137,7 @@ header nav .liens{
 }
 .filtres ul li{
     list-style: none;
-    border: solid 2px rgb(235, 235, 235);
+    border: solid 2px #F2F2F2;
     border-top-right-radius: 25px;
     border-bottom-right-radius: 25px;
     border-top-left-radius: 25px;
@@ -142,6 +147,7 @@ header nav .liens{
     justify-content: center;
     justify-content: space-between;
     align-items: center;
+    transform: scale(1.2);
 }
 .filtres ul li .text{
     padding-left: 10px;
@@ -161,10 +167,11 @@ header nav .liens{
     align-items: center;
     color: blue;
     font-size: 20px;
+    transform: scale(1.05);
 }
 .filtres ul li:hover{
     cursor: pointer;
-    transform: scale(1.05);
+    transform: scale(1.25);
     background-color: rgb(241, 241, 241);
     transition: 0.2s;
 }
@@ -187,80 +194,64 @@ header nav .liens{
 .entete .info p{
     margin-left: 15px;
 }
-section{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
 .content{
     display: flex;
     justify-content: space-around;
-    align-items: center;
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.content h2{
-    margin-left: 40px;
+.content .hebergements h3{
+    width: 100%;
+    margin: 20px 40px;
+}
+.content .populaires h3{
+    align-items: left;
+    width: 90%;
+    margin: 20px 10px;
 }
 .content .hebergements{
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
-    margin-right: 30px;
-    background-color: rgb(216, 216, 216);
+    align-items: center;
+    background-color: #F2F2F2;
     border-radius: 20px;
-    height: 700px;
+    height: 800px;
     flex: 2;
 }
-.ligne1{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 30px;
-    padding-left: 30px;
-}
-.ligne2{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-right: 30px;
-    padding-left: 30px;
-}
-.hebergements .box{
+.hebergements .box-content{
     background-color: white;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: left;
     box-shadow: 0 0 15px rgb(168, 167, 167);
     border-radius: 30px;
-    width: 320px;
+    width: 300px;
     height: 250px;
     margin: 10px;
+    padding: 10px 10px;
     
 }
-.hebergements .box .box-content{
-    display: flex;
-    flex-direction: column;
-}
-.hebergements .box .box-content img{
-    width: 300px;
-    height: 135px;
-    margin-top: 10px;
+.hebergements .box-content img{
+    max-width: 100%;
+    width: 100%;
+    max-height: 100%;
+    height: 55%;
     border-top-right-radius: 20px;
     border-top-left-radius: 20px;
     object-fit: cover;
 }
-.hebergements .box .box-content h3{
-    font-size: 20px;
+.hebergements .box-content h4{
     margin: 7px;
 }
-.hebergements .box .box-content p{
+.hebergements .box-content p{
     font-weight: bold;
     padding-top: 0px;
     margin: 7px;
 }
-.hebergements .box .box-content .stars{
+.hebergements .box-content .stars{
     margin: 7px;
 }
 .hebergements button{
@@ -272,59 +263,54 @@ section{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(216, 216, 216);
+    justify-content: space-evenly;
+    background-color: #F2F2F2;
     border-radius: 20px;
     margin-left: 30px;
-    height: 700px;
+    height: 800px;
     flex: 1;
 }
-.populaires .box{
-    background-color: white;
+.populaires .title{
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+}
+.populaires .box-content{
+    background-color: white;
+    box-shadow: 0 0 15px rgb(168, 167, 167);
     border-radius: 30px;
     width: 400px;
-    height: 200px;
+    height: 180px;
     margin: 10px;
-    
-}
-.populaires .box .box-content{
     display: flex;
     flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    padding: 7px 7px;
 }
-.populaires .box .box-content .details{
+
+.populaires .box-content .details{
     display: flex;
     flex-direction: column;
     margin-left: 10px;
-    justify-content: space-evenly;
+    justify-content: space-around;
 }
-.populaires .box .box-content img{
-    width: 170px;
-    height: 170px;
-    align-items: center;
-    justify-content: center;
-    margin-left: 10px;
+.populaires .box-content img{
+    max-width: 100%;
+    width: 45%;
     border-bottom-left-radius: 20px;
     border-top-left-radius: 20px;
     object-fit: cover;
 }
-.populaires .box .box-content h3{
-    font-size: 20px;
+.populaires .box-content h4{
     margin: 7px;
 }
-.populaires .box .box-content p{
+.populaires .box-content p{
     font-weight: bold;
-    padding-top: 0px;
     margin: 7px;
 }
-.populaires .box .box-content .stars{
+.populaires .box-content .stars{
     margin: 7px;
 }
 .activites{
-    background-color: rgb(216, 216, 216);
+    background-color: #F2F2F2;
     border-radius: 20px;
     height: 700px;
     width: 100%;
@@ -335,21 +321,47 @@ section h2{
 .content button{
     display: flex;
     justify-content: left;
+    align-items: center;
     width: 150px;
     border: none;
     background: none;
     font-size: 20px;
     margin-left: 40px;
+    margin-bottom: 40px;
 }
 .content button:hover{
     cursor: pointer;
-    font-size: 21px;
-    text-shadow: 0px 1px 1px grey;
+    transform: scale(1.1);
     transition: 0.2s;
 }
-.content .box:hover{
+.content .box-content:hover{
     transform: scale(1.02);
     cursor: pointer;
     box-shadow: 0px 0px 17px grey;
     transition: 0.2s;
+}
+footer{
+    margin-top: 40px;
+    background-color: #F2F2F2;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+}
+footer a{
+    color: black;
+}
+#info{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+#hebergements{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+#assist{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
