--- a/style.css
+++ b/style.css
@@ -217,6 +217,10 @@ header nav .liens{
     height: 800px;
     flex: 2;
 }
+.box-content{
+    text-decoration: none;
+    color: black;
+}
 .hebergements .box-content{
     background-color: white;
     display: flex;
@@ -228,8 +232,7 @@ header nav .liens{
     width: 300px;
     height: 250px;
     margin: 10px;
-    padding: 10px 10px;
-    
+    padding: 10px 10px;   
 }
 .hebergements .box-content img{
     width: 100%;
