--- a/style.css
+++ b/style.css
@@ -310,6 +310,27 @@ header nav .liens{
     border-radius: 20px;
     height: 700px;
     width: 100%;
+    display: flex;
+    justify-content: center;
+}
+#activitesbox1{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    align-items: center;
+    width: 1700px;
+    height: 80%;
+    border-radius: 20px 20px 20px 20px;
+}
+#activitesbox1 img{
+    position: relative;
+    width: 100%;
+    height: 90%;
+    border-radius: 20px 20px 0 0;
+    object-fit: cover;
+}
+#activitesbox1 figcaption{
+    margin-top: 20px;
 }
 section h2{
     margin-left: 40px;
@@ -343,6 +364,7 @@ footer{
     width: 100%;
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
 }
 footer h4{
     margin: 10px;
@@ -353,8 +375,7 @@ footer a{
 #info{
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
-    margin: 10px;
+    justify-content: space-between;
 }
 #hebergements, #assist{
     display: flex;
