--- a/style.css
+++ b/style.css
@@ -306,19 +306,29 @@ header nav .liens{
     margin: 7px;
 }
 .activites{
-    background-color: #F2F2F2;
     border-radius: 20px;
     height: 700px;
     width: 100%;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
+    align-items: center;
+    margin: auto;
+}
+.activites figure{
+    margin: 0;
+}
+.activites figcaption{
+    margin: auto;
+}
+.activitesbox{
+    box-shadow: 0 0 15px rgb(168, 167, 167);
 }
 #activitesbox1{
     display: flex;
     flex-direction: column;
     background-color: white;
     align-items: center;
-    width: 1700px;
+    width: 80%;
     height: 80%;
     border-radius: 20px 20px 20px 20px;
 }
@@ -329,8 +339,121 @@ header nav .liens{
     border-radius: 20px 20px 0 0;
     object-fit: cover;
 }
-#activitesbox1 figcaption{
-    margin-top: 20px;
+#activitesbox2{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 40%;
+    border-radius: 20px 20px 20px 20px;
+}
+#activitesbox2 img{
+    position: relative;
+    width: 100%;
+    height: 80%;
+    border-radius: 20px 20px 0 0;
+    object-fit: cover;
+}
+#activitesbox3{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 30%;
+    border-radius: 20px 20px 20px 20px;
+}
+#activitesbox3 img{
+    position: relative;
+    width: 100%;
+    height: 80%;
+    border-radius: 20px 20px 0 0;
+    object-fit: cover;
+}
+#activitesbox4{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    align-items: center;
+    width: 80%;
+    height: 80%;
+    border-radius: 20px 20px 20px 20px;
+}
+#activitesbox4 img{
+    position: relative;
+    width: 100%;
+    height: 90%;
+    border-radius: 20px 20px 0 0;
+    object-fit: cover;
+}
+#activitesbox5{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 30%;
+    border-radius: 20px 20px 20px 20px;
+}
+#activitesbox5 img{
+    position: relative;
+    width: 100%;
+    height: 80%;
+    border-radius: 20px 20px 0 0;
+    object-fit: cover;
+}
+#activitesbox6{
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    width: 80%;
+    height: 40%;
+    border-radius: 20px 20px 20px 20px;
+}
+#activitesbox6 img{
+    position: relative;
+    width: 100%;
+    height: 80%;
+    border-radius: 20px 20px 0 0;
+    object-fit: cover;
+}
+#activitescolumn1{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+}
+#activitescolumn2{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+}
+#activitescolumn3{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+}
+#activitescolumn4{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 50%;
+    height: 100%;
 }
 section h2{
     margin-left: 40px;
