--- a/style.css
+++ b/style.css
@@ -307,7 +307,7 @@ header nav .liens{
 }
 .activites{
     border-radius: 20px;
-    height: 700px;
+    height: 550px;
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -326,7 +326,8 @@ header nav .liens{
     box-shadow: 0 0 15px rgb(168, 167, 167);
 }
 .activitesbox:hover{
-    transform: scale(1.02);
+    transform: scale(1.01);
+    box-shadow: 0px 0px 17px grey;
     transition: 0.2s;
 }
 #activitesbox1{
@@ -335,7 +336,7 @@ header nav .liens{
     background-color: white;
     align-items: center;
     width: 80%;
-    height: 80%;
+    height: 100%;
     border-radius: 20px 20px 20px 20px;
 }
 #activitesbox1 img{
@@ -352,7 +353,7 @@ header nav .liens{
     justify-content: center;
     align-items: center;
     width: 80%;
-    height: 40%;
+    height: 50%;
     border-radius: 20px 20px 20px 20px;
 }
 #activitesbox2 img{
@@ -369,7 +370,7 @@ header nav .liens{
     justify-content: center;
     align-items: center;
     width: 80%;
-    height: 30%;
+    height: 40%;
     border-radius: 20px 20px 20px 20px;
 }
 #activitesbox3 img{
@@ -385,7 +386,7 @@ header nav .liens{
     background-color: white;
     align-items: center;
     width: 80%;
-    height: 80%;
+    height: 100%;
     border-radius: 20px 20px 20px 20px;
 }
 #activitesbox4 img{
@@ -402,7 +403,7 @@ header nav .liens{
     justify-content: center;
     align-items: center;
     width: 80%;
-    height: 30%;
+    height: 40%;
     border-radius: 20px 20px 20px 20px;
 }
 #activitesbox5 img{
@@ -419,7 +420,7 @@ header nav .liens{
     justify-content: center;
     align-items: center;
     width: 80%;
-    height: 40%;
+    height: 50%;
     border-radius: 20px 20px 20px 20px;
 }
 #activitesbox6 img{
@@ -440,7 +441,7 @@ header nav .liens{
 #activitescolumn2{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     width: 50%;
     height: 100%;
@@ -456,7 +457,7 @@ header nav .liens{
 #activitescolumn4{
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     width: 50%;
     height: 100%;
