--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@
 
 body{
     font-family: 'Raleway', sans-serif;
-    width:90%;
+    width:100%;
     margin:auto;
+}
+#main{
+    margin: 0px 150px;
 }
 h1{
     font-size: 38px;
