correction margin bottom #info

--- a/style.css
+++ b/style.css
@@ -511,6 +511,7 @@ footer a{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    margin-bottom: 20px;
 }
 #hebergements, #assist{
     display: flex;
