--- a/style.css
+++ b/style.css
@@ -33,10 +33,10 @@ h5{
     color: grey;
 }
 #logo{
-    display:flex;
-    justify-content: space-between;
-    width: 150px;
-    height: 70px;
+    width: 200px;
+    height: 100px;
+    justify-content: center;
+    align-items: center;
 }
 header{
     display: flex;
