--- a/style.css
+++ b/style.css
@@ -500,12 +500,13 @@ footer{
     justify-content: space-evenly;
     align-items: center;
 }
-footer h4{
-    margin: 10px;
+footer h5{
+    margin: 10px 0px;
 }
 footer a{
     color: black;
-    margin: 3px;
+    margin: 3px 0px;
+    text-decoration-line: none;
 }
 #info{
     display: flex;
