--- a/style.css
+++ b/style.css
@@ -93,6 +93,7 @@ header nav .liens{
     border-bottom: solid 2px #F2F2F2;
     padding-left: 20px;
     outline: none;
+
     font-size: 17px;
 }
 .localisation button{
@@ -137,7 +138,7 @@ header nav .liens{
 
 }
 .filtres ul{
-    width: 48%;
+    width: 55%;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -181,7 +182,7 @@ header nav .liens{
     align-items: center;
 }
 .entete .info i{
-    padding: 10px 10px;
+    padding: 15px 15px;
     width: 5px;
     height: 5px;
     border: solid 1px black;
@@ -194,6 +195,7 @@ header nav .liens{
 }
 .entete .info p{
     margin-left: 15px;
+    font-size: 18px;
 }
 .content{
     display: flex;
