--- a/style_mobile.css
+++ b/style_mobile.css
@@ -256,6 +256,16 @@ section #activities{
     justify-content: space-between;
     align-items: center;
 }
+.activities{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+.activitiescolumn1, .activitiescolumn2{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
 .activitiesbox{
     background-color: white;
     display: flex;
