--- a/style_mobile.css
+++ b/style_mobile.css
@@ -5,15 +5,12 @@ body{
     font-family: 'Raleway', sans-serif;
     margin: auto;
     padding: 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 100%;
 }
 main{
     margin: 0px 20px;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 #logo{
     width: 100px;
@@ -105,7 +102,6 @@ header nav .liens{
     flex-wrap: wrap;
     font-weight: bold;
     justify-content: flex-start;
-    align-items: flex-start;
 
 }
 .filters ul{
@@ -114,7 +110,7 @@ header nav .liens{
     flex-direction: row;
     list-style-type:none;
     justify-content: space-between;
-    padding: 0px 10px;
+    padding: 0px 5px;
 }
 .filters ul li{
     border: solid 2px #F2F2F2;
@@ -326,5 +322,8 @@ footer a{
     margin-left: 30px;
 }
 section h3{
-    margin: 30px 40px;
+    margin: 30px 0px;
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
 }
