--- a/style_mobile.css
+++ b/style_mobile.css
@@ -49,7 +49,8 @@ header{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: auto;
+    margin: 10px 10px;
+    
 }
 header nav{
     display:flex;
