--- a/style_mobile.css
+++ b/style_mobile.css
@@ -50,7 +50,6 @@ header{
     flex-direction: column;
     justify-content: space-between;
     margin: 10px 10px;
-    
 }
 header nav{
     display:flex;
@@ -107,15 +106,7 @@ header nav .liens{
     border-radius: 15px 15px;
 }
 #iconeloc{
-    background-color: #F2F2F2;
-    border-top-left-radius: 12px;
-    border-bottom-left-radius: 12px;
-    font-size: 20px;
     width: 30%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 .filters{
     display: flex;
@@ -270,19 +261,14 @@ header nav .liens{
 }
 section #activities{
     border-radius: 20px;
-    width: 100%;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
     align-items: center;
 }
 .activities{
     display: flex;
     flex-direction: column;
-}
-.activitiescolumn1, .activitiescolumn2{
-    display: flex;
-    flex-direction: column;
+    justify-content: space-between;
 }
 .activitiesbox{
     background-color: white;
@@ -304,6 +290,7 @@ section #activities{
 }
 .activities figure{
     margin: 0;
+    width: 100%;
 }
 .activities figcaption{
     margin: auto;
@@ -314,8 +301,6 @@ footer{
     margin-top: 40px;
     padding: 10px 10px;
     background-color: #F2F2F2;
-    width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
