correction header nav mise en page desktop

--- a/style.css
+++ b/style.css
@@ -41,8 +41,8 @@ header{
     display: flex;
     justify-content: space-between;
 }
-#nav{
-    width: 100%;
+header #nav{
+    display: flex;
 }
 header nav{
     display:flex;
@@ -70,6 +70,7 @@ header nav .liens{
 }
 #button_03{
     font-weight: bolder;
+    order: 4;
 }
 #button_03:hover{
     background-color: #F2F2F2;
