--- a/style.css
+++ b/style.css
@@ -34,12 +34,12 @@ h5{
 #logo{
     width: 200px;
     height: 100px;
-    justify-content: center;
-    align-items: center;
+    margin-right: calc(100% - 200px - 450px)
 }
 header{
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
+    margin: 0 150px;
 }
 header #nav{
     display: flex;
