--- a/style_mobile_2.css
+++ b/style_mobile_2.css
@@ -27,12 +27,14 @@ h4{
     width: 100px;
     height: 50px;
     order: 1;
+    margin: 0;
 }
 header{
     height: auto;
     flex-wrap: wrap;
     flex-direction: row;
     margin: 0;
+    justify-content: space-between;
 }
 header nav{
     width: 100%;
