--- a/style_tablette.css
+++ b/style_tablette.css
@@ -162,6 +162,10 @@ section #activities{
     flex-direction: column;
     height: auto;
 }
+#activities{
+    width: 70%;
+    height: auto;
+}
 .activitiesbox{
     background-color: white;
     display: flex;
@@ -171,8 +175,9 @@ section #activities{
     text-decoration: none;
     box-shadow: 0 0 15px rgb(168, 167, 167);
     border-radius: 20px;
-    height: 250px;
+    height: 300px;
     margin: 50px; 
+    width: 100%;
 }
 .activitiesbox img{
     width: 100%;
